Sat Dec 11 01:25:15 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (ruby_vmptr_destruct): fixme.  don't know why this is wrong.

Sat Dec 11 01:03:08 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (vm_free): the condition was wrong.

Sat Dec 11 00:32:02 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* thread.c (rb_vm_terminate_all_really_everything): New function.
	  On a process termination (not per-VM), termination of all
	  threads, without allowing a sanctuary, is mandatory.

	* vm.c (vm_knockin_on_the_heavens_door): move to thread.c

Sat Dec 11 00:03:58 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (ruby_vmptr_destruct): use what we already have.

Fri Dec 10 21:36:08 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (vm_thread_new): might be a yer another merge miss.  A
	  thread made this way was initialized twice.

Fri Dec 10 19:14:44 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* thread.c (thread_start_func_2): They were double-free.

Fri Dec 10 18:56:07 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (ruby_vmptr_destruct): current thread not always vm->main.
	  What we should avoid terminatiing is the current one.

Thu Dec  9 08:54:45 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* thread_pthread.c (get_stack): might also be a backport mistake.
	  attr shall be destroyed anyway.

Thu Dec  9 08:33:17 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* variable.c (FinalVM_generic_iv_tbl): at_exit function shall use
	  rb_vm_specific_ptr_for_specific_vm instead.

Thu Dec  9 07:26:51 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (rb_vm_initialize): this temporary string should be
	  zero-filled to prevent exception by non-ascii garbage.

Thu Dec  9 07:18:53 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (vm_data_type): might be a merge miss.  dfree shall be specified.

Thu Dec  9 07:02:05 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>
